src/app/photography-page/full-image-viewer/full-image-viewer.component.scss
#fullImgContainer {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,0.85);
	z-index: 10;
	padding-top: 25px;
	padding-bottom: 25px;
	padding-right: 20px;
	padding-left: 20px;
	//padding: 40px;
	box-sizing: border-box;

	&.unzoomedContainer{
		overflow-x: hidden;
		overflow-y: hidden;
		display: flex;
		justify-content: center;
		justify-items: center;
		align-items: center;
		padding-right: 50px;
		padding-left: 50px;
}

	&.zoomedHeightOverflowContainer {
		overflow-y: scroll;
		overflow-x: hidden;
	}

	&.zoomedWidthOverflowContainer {
		overflow-x: scroll;
		overflow-y: hidden;
		touch-action: pan-x !important;
	}

	@media only screen and (max-width: 800px) {
		&.unzoomedContainer {
			padding-right: 20px;
			padding-left: 20px;
		}
	}
}
#fullImgContainer img {
	object-position: center;
}

.zoomedHeightOverflowImg {
	width: 100%;
	height: auto;
}

.zoomedWidthOverflowImg {
	width: auto;
	height: 100%;
}

.unzoomedImg {
	vertical-align: middle;
	width: 100%;
  height: 100%;
  object-fit: contain;
}

#controls {
	position: fixed;
	top: 0;
	right: 0;
	background-color: rgba(0,0,0,0.35);
	z-index: 15;
	padding: 10px;
	display: inline-block;
	border-radius: 0 0 0 10px;

	p {
		display: inline-block;
		margin-left: 5px;
		margin-right: 5px;
		padding-left: 5px;
		padding-right: 5px;
		min-width: 15px;
		text-align: left;
	}

	.selectedRes {
		color: var(--hovered-color)
	}
}

#loadingSpinner {
	position: fixed;
	width: 10px;
	top: 50vh;
	left: 50vw;
	z-index: 15;
	margin-left: -50px;
	margin-top: -50px;
}

.arrowContainer {
	height: 90px;
	width: 50px;
	position: fixed;
	top: 50%;
	transform: translateY(-50%);
	z-index: 11;
	text-align: center;
	background-color: rgba(0,0,0,0.35);
	cursor: pointer;
	display: flex;
	justify-content: center;
	align-items: center;
	visibility: visible;

	svg {
		height: 40px;
		width: 20px;
	}
}

#message {
	position: fixed;
	bottom: 10px;
	width: 100vw;
	text-align: center;
	z-index: 20;
}

@media only screen and (max-width: 800px) {
	.arrowContainer {
		visibility: collapse;
	}
	#message {
		visibility: visible;
	}
}

